# umdasch-product-detection

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  test.py
data/: dataset.yml
data/labels/: training.cache  validation.cache
data/raw/: 5013100-0.txt  5013100-1.txt  5013100-12.txt  5013100-13.txt  5013100-16.txt  5013100-17.txt  5013100-19.txt  5013100-2.txt  5013100-21.txt  5013100-22.txt  5013100-23.txt  5013100-26.txt  5013100-30.txt  5013100-31.txt  5013100-32.txt  5013100-34.txt  5013100-4.txt  5013100-8.txt  5013100-9.txt  5014201-1.txt  5014201-10.txt  5014201-11.txt  5014201-12.txt  5014201-15.txt  5014201-17.txt  5014201-18.txt  5014201-20.txt  5014201-22.txt  5014201-23.txt  5014201-28.txt  5014201-29.txt  5014201-30.txt  5014201-31.txt  5014201-32.txt  5014201-7.txt  5014201-8.txt  6616519-0.txt  6616519-10.txt  6616519-11.txt  6616519-12.txt  (+1063 more)
detection/: CMakeLists.txt
detection/src/include/: detector.hpp  perspective.hpp  preprocess.hpp  product-detection.h  todo.h  watcher.hpp
detection/src/include/logging/: level.h  logging.hpp  subscriber.hpp
detection/src/source/: detector.cpp  perspective.cpp  preprocess.cpp  product-detection.cpp  watcher.cpp
detection/src/source/logging/: logging.cpp  subscriber.cpp
products/: construct.py  mesh.stl
products/5013100/: mesh.stl  product_info.yaml
products/5014201/: product_info.yaml
products/6616519/: product_info.yaml
products/7051436/: product_info.yaml
products/7069621-624_-_200 V1/: mesh.stl  product_info.yaml
products/7069621-624_-_200 V2/: product_info.yaml
products/7069621-624_-_200 V3/: product_info.yaml
products/7069621-624_-_300 V1/: mesh.stl  product_info.yaml
products/7069621-624_-_300 V2/: mesh.stl  product_info.yaml
products/7069621-624_-_300 V3/: product_info.yaml
products/7069621-624_-_350 V1/: product_info.yaml
products/7069621-624_-_350 V2/: product_info.yaml
products/7069621-624_-_350 V3/: product_info.yaml
products/7069621-624_-_400 V1/: mesh.stl  product_info.yaml
products/7069621-624_-_400 V2/: product_info.yaml
products/7069621-624_-_400 V3/: mesh.stl  product_info.yaml
products/7069621-624_-_450 V1/: product_info.yaml
products/7069621-624_-_450 V2/: product_info.yaml
products/7069621-624_-_450 V3/: mesh.stl  product_info.yaml
products/7069621-624_-_500 V1/: mesh.stl  product_info.yaml
products/7069621-624_-_500 V2/: product_info.yaml
products/7069621-624_-_500 V3/: product_info.yaml
products/7069621-624_-_550 V1/: product_info.yaml
products/7069621-624_-_550 V2/: product_info.yaml
products/7069621-624_-_550 V3/: mesh.stl  product_info.yaml
products/7069621-624_-_600 V1/: mesh.stl  product_info.yaml
products/7069621-624_-_600 V2/: product_info.yaml
products/7069621-624_-_600 V3/: product_info.yaml
products/7069621-624_-_650 V1/: product_info.yaml
products/7069621-624_-_650 V2/: mesh.stl  product_info.yaml
products/7069621-624_-_650 V3/: mesh.stl  product_info.yaml
products/7069621-624_-_700 V1/: product_info.yaml
products/7069621-624_-_700 V2/: product_info.yaml
products/7069621-624_-_700 V3/: mesh.stl  product_info.yaml
products/7069621-624_-_800 V1/: product_info.yaml
products/7069621-624_-_800 V2/: product_info.yaml
products/7069621-624_-_800 V3/: mesh.stl  product_info.yaml
products/7069621-624_-_Default/: mesh.stl  product_info.yaml
products/7069621-624_-_gekantet/: product_info.yaml
products/7069625/: mesh.stl  product_info.yaml
products/7069626-628_-_1000/: product_info.yaml
products/7069626-628_-_1250/: product_info.yaml
products/7069626-628_-_1330/: product_info.yaml
products/7069626-628_-_600/: mesh.stl  product_info.yaml
products/7069626-628_-_625/: mesh.stl  product_info.yaml
products/7069626-628_-_Default/: product_info.yaml
products/7069626-628_-_DefaultSM-FLAT-PATTERN/: product_info.yaml
products/7069629/: mesh.stl  product_info.yaml
products/7069630-632_-_1000/: product_info.yaml
products/7069630-632_-_1250/: product_info.yaml
products/7069630-632_-_1330/: product_info.yaml
products/7069630-632_-_625/: product_info.yaml
products/7069630-632_-_Default/: product_info.yaml
products/7069630-632_-_DefaultSM-FLAT-PATTERN/: product_info.yaml
products/7069633/: product_info.yaml
products/7069635/: mesh.stl  product_info.yaml
products/7069637/: mesh.stl  product_info.yaml
products/STL/: 5014201.STL  (+36 more)
src/: application.rs  detection.rs  detection_async.rs  detection_render.rs  gui.rs  main.rs  monitor.rs  product.rs  training.rs  yolo.rs
training/: color.py  generate.py  product.py  sample_detection.py  structure_raw.py  test.py  view.py
(+1301 files in other folders)
