[package]
name = "umdasch-pruduct-detection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
opencv = "0.83.0"
env_logger = "0.10.0"
image = "0.24.6"
egui_grid = "0.2.0"
egui_extras = "0.22.0"