[package]
name = "umdasch-pruduct-detection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
env_logger = "0.10.0"
egui_grid = "0.2.0"
egui_extras = "0.22.0"
clap = { version = "4.0.18", features = ["derive"], optional = true }
image = { version = "0.24.3", features = ["rgb"] }
imageproc = "0.23.0"
indicatif = { version = "0.17.0", optional = true }
opencv = "0.83.0"
shellexpand = {version = "3.0.0", optional = true}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "~0.1"
tokio ={ version = "1.29.1", features = ["full"] }
async-recursion = "1.0.4"
lazy_static = "1.4.0"
num_cpus = "1.16.0"
easybench = "1.1.1"
rayon = "1.7.0"
ownref = "0.3.1"