[package]
name = "umdasch-pruduct-detection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
env_logger = "0.10.0"
egui_grid = "0.2.0"
egui_extras = "0.22.0"
image = { version = "0.24.3", features = ["rgb"] }
imageproc = "0.23.0"
opencv = "0.83.0"
tokio ={ version = "1.29.1", features = ["full"] }
num_cpus = "1.16.0"
rayon = "1.7.0"
futures = "0.3.28"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
